# bptracker-backend

./: .gitignore  README.md  bptracker.db  mcp.localmcp  pyproject.toml  repomix-instruction.md  repomix-output.xml  repomix.config.json
scripts/: local_server.py  migrate_sqlite_to_postgres.py
src/: __init__.py  database.py  main.py  models.py  schemas.py
src/routers/: readings.py
