[project]
name = "bptracker-backend"
version = "0.1.0"
description = "Backend API for BPTracker app"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "fastapi-cli>=0.0.7",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.uv]
package = false
